--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
   "engines": {
     "vscode": "^1.85.0"
   },
-  "categories": ["Other"],
-  "activationEvents": ["onStartupFinished"],
+  "categories": [
+    "Other"
+  ],
+  "activationEvents": [
+    "onStartupFinished"
+  ],
   "main": "./out/extension.js",
   "contributes": {
     "commands": [
@@ -50,11 +54,12 @@
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
+    "@types/sql.js": "^1.4.9",
     "@types/vscode": "^1.85.0",
-    "typescript": "^5.3.0",
-    "@vscode/vsce": "^2.22.0"
+    "@vscode/vsce": "^2.22.0",
+    "typescript": "^5.3.0"
   },
   "dependencies": {
-    "better-sqlite3": "^9.2.2"
+    "sql.js": "^1.10.0"
   }
 }
